#fix scroll-x on safari

--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -32,8 +32,11 @@
   }
 
   .header-background-inner-hydra-right {
+    background-image: url("./images/hydra.png");
+    background-repeat: no-repeat;
+    background-size: contain;
     opacity: 0.2;
-    max-width: 851.01px;
+    width: 851.01px;
     height: 825.96px;
     transform: matrix(-0.82, 0.58, 0.58, 0.82, 0, 0);
     right: -517px;
